Set result message area to hidden on page load.
Update index.html:
- set hidden class to result div

Update index.js:
- removes hidden class when a valid palindrome validation is done, to display the message.

Update styles.css:
- Set hidden class.

--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,6 @@ body {
 
 .result {
   font-size: 1.4rem;
-  margin-top: 10px;
   text-align: center;
 }
 
@@ -88,4 +87,8 @@ body {
   text-align: center;
   font-size: 1.3rem;
   color: #ffffff;
+}
+
+.hidden {
+  display: none;
 }
